@@ -1,5 +1,10 @@
 December-2013 - 0.9.0.3RC1
 - Bugfix: ADIF was not properly imported when Fields where using the Type of data optional field preventing logs from Logger32 being imported. (TNX EB1TR)
+- Added a button to rescore awards.
+- Added a button to update the search Box without modifying the text.
+- KLog recognizes now .ADIF files (instead of only .ADI).
+- Updates Bearing/distance/... when changing Locator.
+- When the QRZ lineedit is blank or the clear button is clicked, entity info is deleted (beam, distance, ...)
 
 November-2014 - 0.9.0.2
 - Bugfix: Right-click on search result sometimes caused KLog to crash.
